horizontal scroll fix

--- a/src/index.scss
+++ b/src/index.scss
@@ -15,6 +15,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   color: rgb(32, 32, 32);
+  overflow-x: hidden;
 }
 
 code {
